cabal-version: 3.0
name: pqi-ffi
version: 0.0.1.1
category: Database, PostgreSQL
synopsis: FFI adapter for pqi, backed by postgresql-libpq
description:
  A @pqi@ adapter implemented as a thin pass-through over the
  @postgresql-libpq@ package, which binds the C @libpq@ library. Use this
  adapter when you want the fidelity of the reference C implementation; it is
  also the oracle that the @pqi-native@ adapter is tested against.

homepage: https://github.com/nikita-volkov/pqi-ffi
bug-reports: https://github.com/nikita-volkov/pqi-ffi/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2026, Nikita Volkov
license: MIT
license-file: LICENSE
extra-doc-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/pqi-ffi

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    Pqi.Ffi

  other-modules:
    Pqi.Ffi.Prelude

  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    postgresql-libpq >=0.11 && <0.12,
    pqi ^>=0,

test-suite ffi-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/test
  main-is: Spec.hs
  build-depends:
    base >=4.11 && <5,
    hspec >=2.11 && <2.12,
    pqi-conformance,
    pqi-ffi,
